# warpsense

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
docs/: CMakeLists.txt  Doxyfile
include/cpu/: update_tsdf.h
include/featsense/: buffers.h  lidar_optimization.h  lidar_processing.h  mapping.h  mypcl.h  odom_estimation.h  visualization.h
include/map/: hdf5_constants.h  hdf5_global_map.h  hdf5_local_map.h  map.h  tsdf.h  util.h
include/params/: floam_params.h  lidar_params.h  map_params.h  params.h  params_base.h  registration_params.h
include/util/: background_thread.h  concurrent_ring_buffer.h  concurrent_ring_buffer.tcc  csv_wrapper.h  filter.h  imu_accumulator.h  kdtree_measurements.h  pose_refinement.h  publish.h  runner.h  runtime_evaluator.h  util.h
include/warpsense/: app.h  consts.h  preprocessing.h  ros_manager.h  thread.h  tsdf_mapping.h  tsdf_registration.h  types.h  vgicp.h
include/warpsense/cuda/: buffer.cu  buffer.h  cleanup.h  common.cuh  device_map.h  device_map_wrapper.h  map_shift.h  playground.h  preprocessing.h  registration.h  update_tsdf.h  util.h
include/warpsense/math/: common.h  math.h  matrix3x3.h  matrix4x4.h  matrix6x6.h  vector3.h  vector6.h  vectorn.h
include/warpsense/registration/: registration.h  util.h
include/warpsense/test/: common.h
include/warpsense/visualization/: map.h
launch/: featsense.launch  featsense_export.launch  imu_filter.launch  lidar_processing.launch  mapping.launch  odom_estimation.launch  pcd2tsdf.launch  pcd_registration.launch  pcl_writer.launch  warpsense.launch  warpsense_cpu.launch  warpsense_export.launch
params/: chemnitz_vorplatz.yaml  dreikaiser.yaml  params.yaml  pcl_writer.yaml
rviz/: floam.rviz  warpsense.rviz
src/cpu/: fastsense.cpp  registration.cpp  update_tsdf.cpp  visualization_node.cpp
src/featsense/: featsense.cpp  lidar_optimization.cpp  lidar_processing.cpp  mapping.cpp  odom_estimation.cpp  visualization.cpp
src/map/: hdf5_global_map.cpp  hdf5_local_map.cpp
src/util/: imu_accumulator.cpp  runtime_evaluator.cpp
src/visualization/: pcl_writer.cpp
src/warpsense/: app.cpp  tsdf_mapping.cpp  tsdf_registration.cpp  warpsense.cpp
src/warpsense/cuda/: cleanup.cu  device_map_wrapper.cu  map_shift.cpp  playground.cu  registration.cpp  registration.cu  update_tsdf.cu
test/: CMakeLists.txt  atan.h  concurrent_ring_buffer.cpp  concurrent_ring_buffer.test  cuda.cpp  cuda.test  edge_detection.cpp  feature_compare.cpp  floam.h  ikdtree_demo.cpp  imu_accumulator.cpp  imu_accumulator.test  inc_pose_updater.cpp  kdtree.cpp  large_scale_voxelgrid.cpp  map.cpp  map.test  open3d_conversions.cpp  params_a.cpp  params_a.test  params_a.yaml  params_b.cpp  params_b.test  params_b.yaml  params_c.cpp  params_c.test  params_c.yaml  pcd2tsdf.cpp  pcd2tsdf.yaml  pcd_registration.cpp  pcd_registration.yaml  preprocessing.cpp  test.cu  test.h  test_update_tsdf_cu.cpp  util.cpp  util.test
